--- a/src/exported/Carousel.css
+++ b/src/exported/Carousel.css
@@ -12,6 +12,8 @@
   display:inline-block;
   width:25%;
   white-space:normal;
+}
+.evroca-carousel-inner{
   padding:10px;
 }
 @media screen and (max-width: 600px) {
