overflow y should be hidden

--- a/src/exported/Carousel.css
+++ b/src/exported/Carousel.css
@@ -5,6 +5,7 @@
 #evroca-carousel{
   white-space: nowrap;
   overflow-x: auto;
+  overflow-y: hidden;
   scroll-behavior:smooth;
 }
 .evroca-carousel-item{
