--- a/src/exported/Carousel.css
+++ b/src/exported/Carousel.css
@@ -1,11 +1,12 @@
 #evroca-carousel::-webkit-scrollbar{
-  width: 0;  /* Remove scrollbar space */
-  background: transparent;  /* Optional: just make scrollbar invisible */
+  width:0;
+  height:0;
+  background:transparent;
 }
 #evroca-carousel{
-  white-space: nowrap;
-  overflow-x: auto;
-  overflow-y: hidden;
+  white-space:nowrap;
+  overflow-x:auto;
+  overflow-y:hidden;
   scroll-behavior:smooth;
 }
 .evroca-carousel-item{
@@ -14,7 +15,7 @@
   width:25%;
   white-space:normal;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width:600px) {
   .evroca-carousel-item{
     width:100%;
   }
@@ -29,4 +30,20 @@
   background:rgba(0,0,0,0.3);
   color:#fff;
   z-index:1;
+}
+#evroca-carousel-circles{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+.evroca-carousel-circle{
+  border:2px solid #000;
+  background:#fff;
+  border-radius:100%;
+  width:8px;
+  height:8px;
+  margin:5px 5px 0 0;
+}
+.evroca-carousel-circle:last-child{
+  margin-right:0;
 }
