--- a/src/exported/Carousel.css
+++ b/src/exported/Carousel.css
@@ -28,6 +28,7 @@
   display:flex;
   align-items:center;
   justify-content:center;
+  padding:16px;
 }
 .evroca-carousel-circle{
   border:2px solid #bbb;
@@ -35,7 +36,7 @@
   border-radius:100%;
   width:5px;
   height:5px;
-  margin:16px 8px 0 0;
+  margin-right:8px;
   transition:all 0.3s ease-in-out;
 }
 .evroca-carousel-circle:last-child{
